--- a/src/paint-example/index.html
+++ b/src/paint-example/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paint Example</title>
     <link rel="stylesheet" href="./assets/css/style.css">
-    <script src="./assets/js/app.js"></script>
+    <script type="module" src="./assets/js/app.js"></script>
 </head>
 <body>
     
